fix(Menu): Fix the issue of collapse menu icons.

--- a/packages/core/src/menu/style/submenu.less
+++ b/packages/core/src/menu/style/submenu.less
@@ -19,7 +19,10 @@
       padding-left: 10px !important;
     }
   }
-  &-title {
+  &-collapse-icon {
+    transform: scale(0.79);
+  }
+  &-title&-collapse-title {
     .w-close, .w-open {
       transition: .3s all;
     }
